[package]
name = "inst"
version = "0.3.0"
authors = ["grzesiek <gbylica@softq.pl> <grzegorz.bylica@gmail.com> "]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
tempdir = "0.3.7"
tempfile = "3.2.0"
error-chain = "0.12.4"
flate2 = "*"
tar = "*"
tokio = { version = "1", features = ["full"] }
clap = "~2.33"
rpassword = "5.0.1"
#quick-xml = "*"
zip = "0.5"